azureps-cmdlets-docs/ResourceManager/AzureRM.Compute/v2.9.0/AzureRM.Compute.md
---
Module Name: AzureRM.Compute
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link:
Help Version: 3.5.0.0
Locale: en-US
content_git_url: https://github.com/Azure/azure-powershell/blob/v3.8.0-April2017/src/ResourceManager/Compute/Commands.Compute/help/AzureRM.Compute.md
original_content_git_url: https://github.com/Azure/azure-powershell/blob/v3.8.0-April2017/src/ResourceManager/Compute/Commands.Compute/help/AzureRM.Compute.md
gitcommit: https://github.com/Azure/azure-powershell/blob/1e0dbd9ea7d5072fb8029e35f1a03f4023d1f52b
---

# AzureRM.Compute Module
## Description
This topic displays the help topics for the Azure Compute Cmdlets.

## AzureRM.Compute Cmdlets
### [Add-AzureRmContainerServiceAgentPoolProfile](Add-AzureRmContainerServiceAgentPoolProfile.md)
Adds a container service agent pool profile.

### [Add-AzureRmImageDataDisk](Add-AzureRmImageDataDisk.md)
Adds a data disk to an image obejct.

### [Add-AzureRmVhd](Add-AzureRmVhd.md)
Uploads a virtual hard disk from an on-premises virtual machine to a blob in a cloud storage account in Azure.

### [Add-AzureRmVMAdditionalUnattendContent](Add-AzureRmVMAdditionalUnattendContent.md)
Adds information to the unattended Windows Setup answer file.

### [Add-AzureRmVMDataDisk](Add-AzureRmVMDataDisk.md)
Adds a data disk to a virtual machine.

### [Add-AzureRmVMNetworkInterface](Add-AzureRmVMNetworkInterface.md)
Adds a network interface to a virtual machine.

### [Add-AzureRmVMSecret](Add-AzureRmVMSecret.md)
Adds a secret to a virtual machine.

### [Add-AzureRmVmssAdditionalUnattendContent](Add-AzureRmVmssAdditionalUnattendContent.md)
Adds information to the unattended Windows Setup answer file.

### [Add-AzureRmVmssDataDisk](Add-AzureRmVmssDataDisk.md)
Adds a data disk to the VMSS.

### [Add-AzureRmVmssDiagnosticsExtension](Add-AzureRmVmssDiagnosticsExtension.md)
Adds a diagnostics extension to the VMSS.

### [Add-AzureRmVmssExtension](Add-AzureRmVmssExtension.md)
Adds an extension to the VMSS.

### [Add-AzureRmVMSshPublicKey](Add-AzureRmVMSshPublicKey.md)
Adds the public keys for SSH for a virtual machine.

### [Add-AzureRmVmssNetworkInterfaceConfiguration](Add-AzureRmVmssNetworkInterfaceConfiguration.md)
Adds a network interface configuration to the VMSS.

### [Add-AzureRmVmssSecret](Add-AzureRmVmssSecret.md)
Adds a secret to a VMSS.

### [Add-AzureRmVmssSshPublicKey](Add-AzureRmVmssSshPublicKey.md)
Adds SSH public keys to the VMSS.

### [Add-AzureRmVmssWinRMListener](Add-AzureRmVmssWinRMListener.md)
Adds a WinRM listener to the VMSS.

### [ConvertTo-AzureRmVMManagedDisk](ConvertTo-AzureRmVMManagedDisk.md)
Converts a virtual machine with blob-based disks to a virtual machine with managed disks.

### [Disable-AzureRmVMDiskEncryption](Disable-AzureRmVMDiskEncryption.md)
Disables encryption on an IaaS virtual machine.

### [Get-AzureRmAvailabilitySet](Get-AzureRmAvailabilitySet.md)
Gets Azure availability sets in a resource group.

### [Get-AzureRmContainerService](Get-AzureRmContainerService.md)
Gets a container service.

### [Get-AzureRmDisk](Get-AzureRmDisk.md)
Gets the properties of a disk.

### [Get-AzureRmImage](Get-AzureRmImage.md)
Gets the properties of an image.

### [Get-AzureRmRemoteDesktopFile](Get-AzureRmRemoteDesktopFile.md)
Gets an .rdp file.

### [Get-AzureRmSnapshot](Get-AzureRmSnapshot.md)
Gets the properties of a snapshot

### [Get-AzureRmVM](Get-AzureRmVM.md)
Gets the properties of a virtual machine.

### [Get-AzureRmVMAccessExtension](Get-AzureRmVMAccessExtension.md)
Gets information about the VMAccess extension.

### [Get-AzureRmVMADDomainExtension](Get-AzureRmVMADDomainExtension.md)
Gets information about an AD domain extension.

### [Get-AzureRmVMAEMExtension](Get-AzureRmVMAEMExtension.md)
Gets information about the AEM extension.

### [Get-AzureRmVMBootDiagnosticsData](Get-AzureRmVMBootDiagnosticsData.md)
Gets boot diagnostics data for a virtual machine.

### [Get-AzureRmVMChefExtension](Get-AzureRmVMChefExtension.md)
Gets information about a Chef extension.

### [Get-AzureRmVMCustomScriptExtension](Get-AzureRmVMCustomScriptExtension.md)
Gets information about a custom script extension.

### [Get-AzureRmVMDiagnosticsExtension](Get-AzureRmVMDiagnosticsExtension.md)
Gets the settings of the Diagnostics extension on a virtual machine.

### [Get-AzureRmVMDiskEncryptionStatus](Get-AzureRmVMDiskEncryptionStatus.md)
Gets the encryption status of the virtual machine.

### [Get-AzureRmVMDscExtension](Get-AzureRmVMDscExtension.md)
Gets the settings of the DSC extension on a particular virtual machine.

### [Get-AzureRmVMDscExtensionStatus](Get-AzureRmVMDscExtensionStatus.md)
Gets the status of the DSC extension handler for a virtual machine.

### [Get-AzureRmVMExtension](Get-AzureRmVMExtension.md)
Gets properties of Virtual Machine Extensions installed on a virtual machine.

### [Get-AzureRmVMExtensionImage](Get-AzureRmVMExtensionImage.md)
Gets all versions for an Azure extension.

### [Get-AzureRmVMExtensionImageType](Get-AzureRmVMExtensionImageType.md)
Gets the type of an Azure extension.

### [Get-AzureRmVMImage](Get-AzureRmVMImage.md)
Gets all the versions of a VMImage.

### [Get-AzureRmVMImageOffer](Get-AzureRmVMImageOffer.md)
Gets VMImage offer types.

### [Get-AzureRmVMImagePublisher](Get-AzureRmVMImagePublisher.md)
Gets the VMImage publishers.

### [Get-AzureRmVMImageSku](Get-AzureRmVMImageSku.md)
Gets VMImage SKUs.

### [Get-AzureRmVMSize](Get-AzureRmVMSize.md)
Gets available virtual machine sizes.

### [Get-AzureRmVMSqlServerExtension](Get-AzureRmVMSqlServerExtension.md)
Gets the settings for a SQL Server extension on a virtual machine.

### [Get-AzureRmVmss](Get-AzureRmVmss.md)
Gets the properties of a VMSS.

### [Get-AzureRmVmssSku](Get-AzureRmVmssSku.md)
Gets the available SKUs for the VMSS.

### [Get-AzureRmVmssVM](Get-AzureRmVmssVM.md)
Gets the properties of a VMSS virtual machine.

### [Get-AzureRmVMUsage](Get-AzureRmVMUsage.md)
Gets the virtual machine core count usage for a location.

### [Grant-AzureRmDiskAccess](Grant-AzureRmDiskAccess.md)
Grants an access to a disk.

### [Grant-AzureRmSnapshotAccess](Grant-AzureRmSnapshotAccess.md)
Grants an access to a snapshot.

### [New-AzureRmAvailabilitySet](New-AzureRmAvailabilitySet.md)
Creates an Azure availability set.

### [New-AzureRmContainerService](New-AzureRmContainerService.md)
Creates a container service.

### [New-AzureRmContainerServiceConfig](New-AzureRmContainerServiceConfig.md)
Creates a local configuration object for a container service.

### [New-AzureRmDisk](New-AzureRmDisk.md)
Creates a managed disk.

### [New-AzureRmDiskConfig](New-AzureRmDiskConfig.md)
Creates a configurable disk object.

### [New-AzureRmDiskUpdateConfig](New-AzureRmDiskUpdateConfig.md)
Creates a configurable disk update object.

### [New-AzureRmImage](New-AzureRmImage.md)
Creats an image.

### [New-AzureRmImageConfig](New-AzureRmImageConfig.md)
Creates a configurable image object.

### [New-AzureRmSnapshot](New-AzureRmSnapshot.md)
Creates a snapshot.

### [New-AzureRmSnapshotConfig](New-AzureRmSnapshotConfig.md)
Creates a configurable snapshot object.

### [New-AzureRmSnapshotUpdateConfig](New-AzureRmSnapshotUpdateConfig.md)
Creates a configurable snapshot update object.

### [New-AzureRmVM](New-AzureRmVM.md)
Creates a virtual machine.

### [New-AzureRmVMConfig](New-AzureRmVMConfig.md)
Creates a configurable virtual machine object.

### [New-AzureRmVmss](New-AzureRmVmss.md)
Creates a VMSS.

### [New-AzureRmVmssConfig](New-AzureRmVmssConfig.md)
Creates a VMSS configuration object.

### [New-AzureRmVmssIpConfig](New-AzureRmVmssIpConfig.md)
Creates an IP configuration for a network interface of a VMSS.

### [New-AzureRmVmssVaultCertificateConfig](New-AzureRmVmssVaultCertificateConfig.md)
Creates a Key Vault certificate configuration.

### [New-AzureVMSqlServerAutoBackupConfig](New-AzureVMSqlServerAutoBackupConfig.md)
Creates a configuration object for SQL Server automatic backup.

### [New-AzureVMSqlServerAutoPatchingConfig](New-AzureVMSqlServerAutoPatchingConfig.md)
Creates a configuration object for automatic patching on a virtual machine.

### [New-AzureVMSqlServerKeyVaultCredentialConfig](New-AzureVMSqlServerKeyVaultCredentialConfig.md)
Creates a configuration object for SQL server key vault credential on a virtual machine.

### [Publish-AzureRmVMDscConfiguration](Publish-AzureRmVMDscConfiguration.md)
Uploads a DSC script to Azure blob storage.

### [Remove-AzureRmAvailabilitySet](Remove-AzureRmAvailabilitySet.md)
Removes an availability set from Azure.

### [Remove-AzureRmContainerService](Remove-AzureRmContainerService.md)
Removes a container service.

### [Remove-AzureRmContainerServiceAgentPoolProfile](Remove-AzureRmContainerServiceAgentPoolProfile.md)
Removes an agent pool profile from a container service.

### [Remove-AzureRmDisk](Remove-AzureRmDisk.md)
Removes a disk.

### [Remove-AzureRmImage](Remove-AzureRmImage.md)
Removes an image.

### [Remove-AzureRmImageDataDisk](Remove-AzureRmImageDataDisk.md)
Removes a data disk from an image object.

### [Remove-AzureRmSnapshot](Remove-AzureRmSnapshot.md)
Removes a snapshot.

### [Remove-AzureRmVM](Remove-AzureRmVM.md)
Removes a virtual machine from Azure.

### [Remove-AzureRmVMAccessExtension](Remove-AzureRmVMAccessExtension.md)
Removes the VMAccess extension from a virtual machine.

### [Remove-AzureRmVMAEMExtension](Remove-AzureRmVMAEMExtension.md)
Removes the AEM extension from a virtual machine.

### [Remove-AzureRmVMBackup](Remove-AzureRmVMBackup.md)
Removes the backup from a virtual machine.

### [Remove-AzureRmVMChefExtension](Remove-AzureRmVMChefExtension.md)
Removes the Chef extension from a virtual machine.

### [Remove-AzureRmVMCustomScriptExtension](Remove-AzureRmVMCustomScriptExtension.md)
Removes a custom script extension from a virtual machine.

### [Remove-AzureRmVMDataDisk](Remove-AzureRmVMDataDisk.md)
Removes a data disk from a virtual machine.

### [Remove-AzureRmVMDiagnosticsExtension](Remove-AzureRmVMDiagnosticsExtension.md)
Removes the Diagnostics extension from a virtual machine.

### [Remove-AzureRmVMDiskEncryptionExtension](Remove-AzureRmVMDiskEncryptionExtension.md)
Removes the disk encryption extension from a virtual machine.

### [Remove-AzureRmVMDscExtension](Remove-AzureRmVMDscExtension.md)
Removes a DSC extension handler from a virtual machine in a resource group.

### [Remove-AzureRmVMExtension](Remove-AzureRmVMExtension.md)
Removes an extension from a virtual machine.

### [Remove-AzureRmVMNetworkInterface](Remove-AzureRmVMNetworkInterface.md)
Removes a network interface from a virtual machine.

### [Remove-AzureRmVMSecret](Remove-AzureRmVMSecret.md)
Removes (a) secret(s) from a virtual machine object

### [Remove-AzureRmVMSqlServerExtension](Remove-AzureRmVMSqlServerExtension.md)
Removes a SQL Server extension from a virtual machine.

### [Remove-AzureRmVmss](Remove-AzureRmVmss.md)
Removes the VMSS or a virtual machine that is within the VMSS.

### [Remove-AzureRmVmssDataDisk](Remove-AzureRmVmssDataDisk.md)
Removes a data disk from the VMSS.

### [Remove-AzureRmVmssDiagnosticsExtension](Remove-AzureRmVmssDiagnosticsExtension.md)
Removes a diagnostics extension from the VMSS.

### [Remove-AzureRmVmssExtension](Remove-AzureRmVmssExtension.md)
Removes an extension from the VMSS.

### [Remove-AzureRmVmssNetworkInterfaceConfiguration](Remove-AzureRmVmssNetworkInterfaceConfiguration.md)
Removes a network interface configuration from a VMSS.

### [Restart-AzureRmVM](Restart-AzureRmVM.md)
Restarts an Azure virtual machine.

### [Restart-AzureRmVmss](Restart-AzureRmVmss.md)
Restarts the VMSS or a virtual machine within the VMSS.

### [Revoke-AzureRmDiskAccess](Revoke-AzureRmDiskAccess.md)
Revokes an access to a disk.

### [Revoke-AzureRmSnapshotAccess](Revoke-AzureRmSnapshotAccess.md)
Revokes an access to a snapshot.

### [Save-AzureRmVhd](Save-AzureRmVhd.md)
Saves downloaded .vhd images locally.

### [Save-AzureRmVMImage](Save-AzureRmVMImage.md)
Saves a virtual machine as a VMImage.

### [Set-AzureRmDiskDiskEncryptionKey](Set-AzureRmDiskDiskEncryptionKey.md)
Sets the disk encryption key properties on a disk object.

### [Set-AzureRmDiskImageReference](Set-AzureRmDiskImageReference.md)
Sets the image reference properties on a disk object.

### [Set-AzureRmDiskKeyEncryptionKey](Set-AzureRmDiskKeyEncryptionKey.md)
Sets the key encryption key properties on a disk object.

### [Set-AzureRmDiskUpdateDiskEncryptionKey](Set-AzureRmDiskUpdateDiskEncryptionKey.md)
Sets the disk encryption key properties on on a disk update object.

### [Set-AzureRmDiskUpdateImageReference](Set-AzureRmDiskUpdateImageReference.md)
Sets the image reference properties on a disk update object.

### [Set-AzureRmDiskUpdateKeyEncryptionKey](Set-AzureRmDiskUpdateKeyEncryptionKey.md)
Sets the key encryption key properties on a disk update object.

### [Set-AzureRmImageOsDisk](Set-AzureRmImageOsDisk.md)
Sets the operating system disk properties on an image object.

### [Set-AzureRmSnapshotDiskEncryptionKey](Set-AzureRmSnapshotDiskEncryptionKey.md)
Sets the disk encryption key properties on a snapshot object.

### [Set-AzureRmSnapshotImageReference](Set-AzureRmSnapshotImageReference.md)
Sets the image reference properties on a snapshot object.

### [Set-AzureRmSnapshotKeyEncryptionKey](Set-AzureRmSnapshotKeyEncryptionKey.md)
Sets the key encryption key properties on a snapshot object.

### [Set-AzureRmSnapshotUpdateDiskEncryptionKey](Set-AzureRmSnapshotUpdateDiskEncryptionKey.md)
Sets the disk encryption key properties on a snapshot update object.

### [Set-AzureRmSnapshotUpdateImageReference](Set-AzureRmSnapshotUpdateImageReference.md)
Sets the image reference properties on a snapshot update object.

### [Set-AzureRmSnapshotUpdateKeyEncryptionKey](Set-AzureRmSnapshotUpdateKeyEncryptionKey.md)
Sets the key encryption key properties on a snapshot update object.

### [Set-AzureRmVM](Set-AzureRmVM.md)
Marks a virtual machine as generalized.

### [Set-AzureRmVMAccessExtension](Set-AzureRmVMAccessExtension.md)
Adds the VMAccess extension to a virtual machine.

### [Set-AzureRmVMADDomainExtension](Set-AzureRmVMADDomainExtension.md)
Adds an AD domain extension to a virtual machine.

### [Set-AzureRmVMAEMExtension](Set-AzureRmVMAEMExtension.md)
Enables support for monitoring for SAP systems.

### [Set-AzureRmVMBackupExtension](Set-AzureRmVMBackupExtension.md)
Sets the backup extension properties on a virtual machine.

### [Set-AzureRmVMBginfoExtension](Set-AzureRmVMBginfoExtension.md)
Adds the BGInfo extension to a virtual machine.

### [Set-AzureRmVMBootDiagnostics](Set-AzureRmVMBootDiagnostics.md)
Modifies boot diagnostics properties of a virtual machine.

### [Set-AzureRmVMChefExtension](Set-AzureRmVMChefExtension.md)
Adds a Chef extension to a virtual machine.

### [Set-AzureRmVMCustomScriptExtension](Set-AzureRmVMCustomScriptExtension.md)
Adds a custom script extension to a virtual machine.

### [Set-AzureRmVMDataDisk](Set-AzureRmVMDataDisk.md)
Modifies properties of a virtual machine data disk.

### [Set-AzureRmVMDiagnosticsExtension](Set-AzureRmVMDiagnosticsExtension.md)
Configures the Azure diagnostics extension on a virtual machine.

### [Set-AzureRmVMDiskEncryptionExtension](Set-AzureRmVMDiskEncryptionExtension.md)
Enables encryption on a running IaaS virtual machine in Azure.

### [Set-AzureRmVMDscExtension](Set-AzureRmVMDscExtension.md)
Configures the DSC extension on a virtual machine.

### [Set-AzureRmVMExtension](Set-AzureRmVMExtension.md)
Updates extension properties or adds an extension to a virtual machine.

### [Set-AzureRmVMOperatingSystem](Set-AzureRmVMOperatingSystem.md)
Sets operating system properties for a virtual machine.

### [Set-AzureRmVMOSDisk](Set-AzureRmVMOSDisk.md)
Sets the operating system disk properties on a virtual machine.

### [Set-AzureRmVMPlan](Set-AzureRmVMPlan.md)
Sets the Marketplace plan information on a virtual machine.

### [Set-AzureRmVMSourceImage](Set-AzureRmVMSourceImage.md)
Specifies the platform image for a virtual machine.

### [Set-AzureRmVMSqlServerExtension](Set-AzureRmVMSqlServerExtension.md)
Sets the Azure SQL Server extension on a virtual machine.

### [Set-AzureRmVmss](Set-AzureRmVmss.md)
Sets specific actions on a specified VMSS.

### [Set-AzureRmVmssOsProfile](Set-AzureRmVmssOsProfile.md)
Sets the VMSS operating system profile properties.

### [Set-AzureRmVmssStorageProfile](Set-AzureRmVmssStorageProfile.md)
Sets the storage profile properties for the VMSS.

### [Set-AzureRmVmssVM](Set-AzureRmVmssVM.md)
Modifies the state of a VMSS instance.

### [Start-AzureRmVM](Start-AzureRmVM.md)
Starts an Azure virtual machine.

### [Start-AzureRmVmss](Start-AzureRmVmss.md)
Starts the VMSS or a set of virtual machines within the VMSS.

### [Stop-AzureRmVM](Stop-AzureRmVM.md)
Stops an Azure virtual machine.

### [Stop-AzureRmVmss](Stop-AzureRmVmss.md)
Stops the VMSS or a set of virtual machines within the VMSS.

### [Test-AzureRmVMAEMExtension](Test-AzureRmVMAEMExtension.md)
Checks the configuration of the AEM extension.

### [Update-AzureRmAvailabilitySet](Update-AzureRmAvailabilitySet.md)
Updates an availability set.

### [Update-AzureRmContainerService](Update-AzureRmContainerService.md)
Updates the state of a container service.

### [Update-AzureRmDisk](Update-AzureRmDisk.md)
Updates a disk.

### [Update-AzureRmImage](Update-AzureRmImage.md)
Updates an image.

### [Update-AzureRmSnapshot](Update-AzureRmSnapshot.md)
Updates a snapshot.

### [Update-AzureRmVM](Update-AzureRmVM.md)
Updates the state of an Azure virtual machine.

### [Update-AzureRmVmss](Update-AzureRmVmss.md)
Updates the state of a VMSS.

### [Update-AzureRmVmssInstance](Update-AzureRmVmssInstance.md)
Starts a manual upgrade of the VMSS instance.

